fix: line spacing

--- a/style.css
+++ b/style.css
@@ -273,16 +273,16 @@ img {
     grid-template-columns: 1fr;
   }
 .hero h1 {
-  font-size: 2.0rem;
-  margin-bottom: 2rem;
+  font-size: 3.0rem;
+  margin-bottom: 1rem;
 }
 .hero {
-  padding: 5rem 2rem;
+  padding: 8rem 4rem;
 
 #button-container {
   flex-direction: column;
   gap: 1rem;
-  margin-top: 20px;
+  margin-top: 50px;
 }
   @media (max-width: 768px) {
     .footer-content {
